--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Push to Docker Hub and deploy to AWS
 
 on:
   push:
@@ -32,6 +32,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Build Docker image
         uses: docker/build-push-action@v3
         with:
@@ -42,21 +48,18 @@ jobs:
           cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/myapp:cache
           cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/myapp:cache,mode=max
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
       - name: Push Docker image to Docker Hub
         run: |
-          docker tag myapp:latest ${{ secrets.DOCKER_HUB_USERNAME }}/myapp:latest
           docker push ${{ secrets.DOCKER_HUB_USERNAME }}/myapp:latest
 
-      - name: Deploy to AWS EC2
-        run: |
-          ssh -i ${{ secrets.AWS_SSH_KEY }} ubuntu@${{ secrets.AWS_EC2_IP }} << 'EOF'
-            cd /path/to/your/project
-            docker-compose pull
-            docker-compose up -d
-          EOF
+      # - name: Deploy to AWS EC2
+      #   env:
+      #     AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+      #     AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+      #   run: |
+      #     chmod 600 $AWS_SSH_KEY
+      #     ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
+      #       cd /path/to/your/project
+      #       docker-compose pull
+      #       docker-compose up -d
+      #     EOF
