--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,8 +34,8 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}fasapit-docker:tag 
-          
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
+
       # - name: Deploy to AWS EC2
       #   env:
       #     AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
