--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,6 @@
+networks:
+  dev:
+
 services:
   app:
     build:
@@ -15,6 +18,7 @@ services:
       - redis
     command: >
       bash -c "alembic upgrade head && gunicorn main:app --workers=4 --worker-class=uvicorn.workers.UvicornWorker --bind=0.0.0.0:8000"
+
 
   db:
     image: postgres:latest
