--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -34,7 +34,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          ls -l # Faylni tekshirish uchun
+          if [ -f requirements.txt ]; then \
+            pip install -r requirements.txt; \
+          else \
+            echo "requirements.txt fayli mavjud emas"; \
+            exit 1; \
+          fi
 
   build_docker:
     runs-on: ubuntu-latest
@@ -74,47 +80,47 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
 
-  # connect_server:
-  #   runs-on: ubuntu-latest
-  #   needs: push_docker
+  connect_server:
+    runs-on: ubuntu-latest
+    needs: push_docker
 
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Connect)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP echo "Connected successfully"
+    steps:
+      - name: Deploy to AWS EC2 (Connect)
+        env:
+          AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+          AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+        run: |
+          chmod 600 $AWS_SSH_KEY
+          ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP echo "Connected successfully"
 
-  # pull_server:
-  #   runs-on: ubuntu-latest
-  #   needs: connect_server
+  pull_server:
+    runs-on: ubuntu-latest
+    needs: connect_server
 
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Pull Docker image)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
-  #           cd /path/to/your/project
-  #           docker-compose pull
-  #         EOF
+    steps:
+      - name: Deploy to AWS EC2 (Pull Docker image)
+        env:
+          AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+          AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+        run: |
+          chmod 600 $AWS_SSH_KEY
+          ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
+            cd /path/to/your/project
+            docker-compose pull
+          EOF
 
-  # restart_server:
-  #   runs-on: ubuntu-latest
-  #   needs: pull_server
+  restart_server:
+    runs-on: ubuntu-latest
+    needs: pull_server
 
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Restart Docker containers)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
-  #           cd /path/to/your/project
-  #           docker-compose up -d
-  #         EOF
+    steps:
+      - name: Deploy to AWS EC2 (Restart Docker containers)
+        env:
+          AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+          AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+        run: |
+          chmod 600 $AWS_SSH_KEY
+          ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
+            cd /path/to/your/project
+            docker-compose up -d
+          EOF
