--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Push to Docker Hub and deploy to AWS
+name: Build, Push, and Deploy
 
 on:
   push:
@@ -6,12 +6,18 @@ on:
       - main
 
 jobs:
-  build:
+  checkout:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+  setup:
+    runs-on: ubuntu-latest
+    needs: checkout
+
+    steps:
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
@@ -32,6 +38,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-
 
+  build_docker:
+    runs-on: ubuntu-latest
+    needs: setup
+
+    steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -43,23 +54,69 @@ jobs:
         with:
           context: .
           file: Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
+
+  push_docker:
+    runs-on: ubuntu-latest
+    needs: build_docker
+
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/myapp:latest
-          cache-from: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/myapp:cache
-          cache-to: type=registry,ref=${{ secrets.DOCKER_HUB_USERNAME }}/myapp:cache,mode=max
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
 
-      - name: Push Docker image to Docker Hub
-        run: |
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/myapp:latest
+  # connect_server:
+  #   runs-on: ubuntu-latest
+  #   needs: push_docker
 
-      # - name: Deploy to AWS EC2
-      #   env:
-      #     AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-      #     AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-      #   run: |
-      #     chmod 600 $AWS_SSH_KEY
-      #     ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
-      #       cd /path/to/your/project
-      #       docker-compose pull
-      #       docker-compose up -d
-      #     EOF
+  #   steps:
+  #     - name: Deploy to AWS EC2 (Connect)
+  #       env:
+  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+  #       run: |
+  #         chmod 600 $AWS_SSH_KEY
+  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP echo "Connected successfully"
+
+  # pull_server:
+  #   runs-on: ubuntu-latest
+  #   needs: connect_server
+
+  #   steps:
+  #     - name: Deploy to AWS EC2 (Pull Docker image)
+  #       env:
+  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+  #       run: |
+  #         chmod 600 $AWS_SSH_KEY
+  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
+  #           cd /path/to/your/project
+  #           docker-compose pull
+  #         EOF
+
+  # restart_server:
+  #   runs-on: ubuntu-latest
+  #   needs: pull_server
+
+  #   steps:
+  #     - name: Deploy to AWS EC2 (Restart Docker containers)
+  #       env:
+  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
+  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
+  #       run: |
+  #         chmod 600 $AWS_SSH_KEY
+  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
+  #           cd /path/to/your/project
+  #           docker-compose up -d
+  #         EOF
