--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  checkout:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,17 +33,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-
 
-  build_docker:
-    runs-on: ubuntu-latest
-    needs: checkout
-
-    steps:
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
       - name: Build Docker image
         uses: docker/build-push-action@v3
         with:
@@ -52,11 +41,6 @@ jobs:
           push: false
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
 
-  push_docker:
-    runs-on: ubuntu-latest
-    needs: build_docker
-
-    steps:
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -71,47 +55,14 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
 
-  # connect_server:
-  #   runs-on: ubuntu-latest
-  #   needs: push_docker
-
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Connect)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP echo "Connected successfully"
-
-  # pull_server:
-  #   runs-on: ubuntu-latest
-  #   needs: connect_server
-
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Pull Docker image)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
-  #           cd /path/to/your/project
-  #           docker-compose pull
-  #         EOF
-
-  # restart_server:
-  #   runs-on: ubuntu-latest
-  #   needs: pull_server
-
-  #   steps:
-  #     - name: Deploy to AWS EC2 (Restart Docker containers)
-  #       env:
-  #         AWS_SSH_KEY: ${{ secrets.AWS_SSH_KEY }}
-  #         AWS_EC2_IP: ${{ secrets.AWS_EC2_IP }}
-  #       run: |
-  #         chmod 600 $AWS_SSH_KEY
-  #         ssh -i $AWS_SSH_KEY ubuntu@$AWS_EC2_IP << 'EOF'
-  #           cd /path/to/your/project
-  #           docker-compose up -d
-  #         EOF
+      # - name: Deploy to AWS EC2
+      #   uses: appleboy/ssh-action@v0.1.5
+      #   with:
+      #     host: ${{ secrets.AWS_EC2_IP }}
+      #     key: ${{ secrets.AWS_SSH_KEY }}
+      #     username: ubuntu
+      #     script: |
+      #       echo "Connected successfully"
+      #       cd /path/to/your/project
+      #       docker-compose pull
+      #       docker-compose up -d
