--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -55,11 +55,11 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
 
-      - name: Deploy to EC2 via SSH Action
+      - name: Run SSH command
         uses: appleboy/ssh-action@v0.1.5
         with:
-          host: ${{ secrets.AWS_EC2_IP }}
-          username: ubuntu
+          host: ${{ secrets.AWS_SSH_HOST }}
+          username: ${{ secrets.AWS_SSH_USERNAME }}
           key: ${{ secrets.AWS_SSH_KEY }}
           script: |
             cd /home/ubuntu/fastapi-docker-ci-cd
