--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Build, Push, and Deploy
+name: Build and Deploy to AWS
 
 on:
   push:
@@ -13,33 +13,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.12"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: |
-            /root/.cache/docker
-            /root/.cache/buildkit
-          key: ${{ runner.os }}-build-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-build-
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: Dockerfile
-          push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -47,22 +22,18 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Push Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fasapit-docker:latest
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{secrets.DOCKER_HUB_USERNAME}}/${{ secrets.DOCKER_HUB_IMAGE }}:latest .
+          docker push ${{secrets.DOCKER_HUB_USERNAME}}/${{ secrets.DOCKER_HUB_IMAGE }}:latest
 
-      - name: Run SSH command
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.AWS_SSH_HOST }}
-          username: ${{ secrets.AWS_SSH_USERNAME }}
-          key: ${{ secrets.AWS_SSH_KEY }}
-          script: |
-            whoami
-            # cd /home/ubuntu/fastapi-docker-ci-cd
-            # docker-compose pull
-            # docker-compose up -d
+      - name: Deploy to AWS EC2
+        env:
+          PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
+          HOST: ${{ secrets.AWS_SSH_HOST }}
+          USERNAME: ${{ secrets.AWS_SSH_USERNAME }}
+        run: |
+          ssh -i "$PRIVATE_KEY" "$USERNAME@$HOST" << 'EOF'
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_IMAGE }}:latest
+            docker-compose -f /home/ubuntu/fastapi-docker/docker-compose.yml up -d --build
+          EOF
