--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,18 +37,12 @@ jobs:
       - name: Set up SSH
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.AWS_SSH_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-
-      - name: Add server to known_hosts
-        run: |
-          ssh-keyscan -H ${{ secrets.AWS_SSH_HOST }} >> ~/.ssh/known_hosts
-        continue-on-error: false
+          echo "${{ secrets.AWS_SSH_KEY }}" > ~/.ssh/github_connection_rsa
+          chmod 600 ~/.ssh/github_connection_rsa
 
       - name: Test SSH Connection
         run: |
-          ssh -v -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa ${{ secrets.AWS_SSH_USERNAME }}@${{ secrets.AWS_SSH_HOST }} 'echo "SSH connection successful"'
-        continue-on-error: false
+          ssh -i ~/.ssh/github_connection_rsa ${{ secrets.AWS_SSH_USERNAME }}@${{ secrets.AWS_SSH_HOST }} 'echo "SSH connection successful"'
 
       - name: Deploy to Server
         run: |
