--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,17 +6,21 @@ on:
       - main
 
 jobs:
-  test-ssh-connection:
-    name: Test SSH Connection
+  deploy_to_ec2:
+    name: Deploy to EC2
     runs-on: ubuntu-latest
-
+    env:
+      SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
+      EC2_HOST: ${{ secrets.AWS_SSH_HOST }}
+      EC2_USER: ${{ secrets.AWS_SSH_USERNAME }}
     steps:
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.5.4
-        with:
-          ssh-private-key: ${{ secrets.AWS_SSH_KEY }}
-
-      - name: SSH into Server and Deploy
+      - name: Set up SSH key
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_SSH_USERNAME }}@${{ secrets.AWS_SSH_HOST }} \
-          "echo 'connected'"
+          mkdir -p /home/runner/.ssh
+          echo "${{ secrets.AWS_SSH_KEY }}" > /home/runner/.ssh/id_rsa
+          chmod 400 /home/runner/.ssh/id_rsa
+          ssh-keyscan -p 22 ${{ secrets.AWS_SSH_HOST }} >> /home/runner/.ssh/known_hosts
+      - name: Test SSH connection
+        run: |
+          pwd
+          ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/id_rsa ${{ secrets.AWS_SSH_USERNAME }}@${{ secrets.AWS_SSH_HOST }} 'echo "Connected!"'
