--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Test SSH Connection
+name: Deploy
 
 on:
   push:
@@ -6,21 +6,14 @@ on:
       - main
 
 jobs:
-  deploy_to_ec2:
-    name: Deploy to EC2
+  build:
+    name: Build
     runs-on: ubuntu-latest
-    env:
-      SSH_PRIVATE_KEY: ${{ secrets.AWS_SSH_KEY }}
-      EC2_HOST: ${{ secrets.AWS_SSH_HOST }}
-      EC2_USER: ${{ secrets.AWS_SSH_USERNAME }}
     steps:
-      - name: Set up SSH key
-        run: |
-          mkdir -p /home/runner/.ssh
-          echo "${{ secrets.AWS_SSH_KEY }}" > /home/runner/.ssh/id_rsa
-          chmod 400 /home/runner/.ssh/id_rsa
-          ssh-keyscan -p 22 ${{ secrets.AWS_SSH_HOST }} >> /home/runner/.ssh/known_hosts
-      - name: Test SSH connection
-        run: |
-          pwd
-          ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/id_rsa ${{ secrets.AWS_SSH_USERNAME }}@${{ secrets.AWS_SSH_HOST }} 'echo "Connected!"'
+      - name: executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: whoami
